Fix: set min-height on player message to reduce height shifting when message changes on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -603,7 +603,10 @@ footer {
     margin-top: 10px;
 }
 
-#player-message,
+#player-message {
+    min-height: 6rem;
+}
+
 #placement-controls {
     min-height: 75px;
 }
